--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -24,15 +24,16 @@
   display: flex
   justify-content: center
   align-items: center
-  height: 100%
+  flex-direction: column
+  min-height: 100vh
 
 .stripped
   background-image: repeating-linear-gradient(135deg, rgba(0,0,0,.4), rgba(0,0,0,.4) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.4) 3px)
   background-size: 4px 4px
-  height: 100%
+  min-height: 100vh
 
 body, html
-  height: 100%
+  min-height: 100vh
 
 body
   background-repeat: no-repeat
@@ -62,6 +63,7 @@ h1, h2, h3, h4, h5, h6
     -webkit-user-drag: none
     height: auto
     display: block
+    user-select: none
 
 .social
   list-style-type: none
@@ -85,7 +87,7 @@ h1, h2, h3, h4, h5, h6
   opacity: 0.2
   transition: opacity .2s ease
   &:hover
-    opacity: 0.7
+    opacity: 0.8
   a
     color: inherit
     &:hover
@@ -113,6 +115,10 @@ h1, h2, h3, h4, h5, h6
 
 @media (max-width: 768px)
   #userInfo
+    position: relative
     width: 100%
     left: 0
+    opacity: 0.8
     text-align: center
+  .profile
+    padding-bottom: 2em
