--- a/src/sass/fontello/fontello.css
+++ b/src/sass/fontello/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?77973085');
-  src: url('../font/fontello.eot?77973085#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?77973085') format('woff2'),
-       url('../font/fontello.woff?77973085') format('woff'),
-       url('../font/fontello.ttf?77973085') format('truetype'),
-       url('../font/fontello.svg?77973085#fontello') format('svg');
+  src: url('../font/fontello.eot?42483230');
+  src: url('../font/fontello.eot?42483230#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?42483230') format('woff2'),
+       url('../font/fontello.woff?42483230') format('woff'),
+       url('../font/fontello.ttf?42483230') format('truetype'),
+       url('../font/fontello.svg?42483230#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?77973085#fontello') format('svg');
+    src: url('../font/fontello.svg?42483230#fontello') format('svg');
   }
 }
 */
@@ -56,5 +56,8 @@
 }
  
 .icon-mail:before { content: '\e800'; } /* '' */
+.icon-arrows-cw:before { content: '\e801'; } /* '' */
+.icon-eye-off:before { content: '\e802'; } /* '' */
+.icon-eye:before { content: '\e803'; } /* '' */
 .icon-github-circled:before { content: '\f09b'; } /* '' */
 .icon-linkedin-squared:before { content: '\f30c'; } /* '' */
