update vue project

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,6 +1,5 @@
-@import "~normalize.css";
+@import "~sanitize.css";
 @import url('https://fonts.googleapis.com/css?family=Jaldi');
-
 * {
   box-sizing: border-box;
 }
