--- a/src/styles/_progressive.scss
+++ b/src/styles/_progressive.scss
@@ -11,10 +11,12 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    overflow: hidden;
   }
 
   &__image {
     @extend %absolute;
+
     opacity: 1;
     background-position: 50%;
     background-repeat: no-repeat;
@@ -28,6 +30,7 @@
 
   &__thumb {
     @extend %absolute;
+
     filter: blur(20px);
     transform: scale(1.1);
   }
@@ -36,14 +39,15 @@
     position: relative;
     height: 100%;
     background-repeat: repeat;
-    background-image: repeating-linear-gradient(
-      135deg,
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.4) 1px,
-      transparent 2px,
-      transparent 0,
-      rgba(0, 0, 0, 0.4) 3px
-    );
+    background-image:
+      repeating-linear-gradient(
+        135deg,
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4) 1px,
+        transparent 2px,
+        transparent 0,
+        rgba(0, 0, 0, 0.4) 3px
+      );
     background-size: 4px 4px;
     transition: background 0.2s ease;
   }
