--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,10 +1,9 @@
 header.header
   button.header__button.icon
     svg.icon.no-slash
-      use(href="./svg/eye.svg")
+      use(href='./svg/eye.svg')
     //- svg.icon.slash
     //-   use(href="./svg/eye-slash.svg")
   button.header__button 
     svg.icon
-      use(href="./svg/s.svg")
-  
+      use(href='./svg/s.svg')
