--- a/src/index.pug
+++ b/src/index.pug
@@ -1,8 +1,8 @@
 doctype html
-html(lang="en" itemtype="https://schema.org/Person" itemscope)
+html(lang='en', itemtype='https://schema.org/Person', itemscope)
   head
     include ./components/head.pug
-    link( rel="stylesheet" href="/index.scss" )
+    link(rel='stylesheet', href='/index.scss')
   body
     include ./components/progressive.pug
 
@@ -10,4 +10,4 @@ html(lang="en" itemtype="https://schema.org/Person" itemscope)
       include ./components/header.pug
       include ./components/profile.pug
       include ./components/footer.pug
-    script(src="/index.ts")
+    script(src='/index.ts')
