--- a/src/styles/_progressive.scss
+++ b/src/styles/_progressive.scss
@@ -39,15 +39,14 @@
     position: relative;
     height: 100%;
     background-repeat: repeat;
-    background-image:
-      repeating-linear-gradient(
-        135deg,
-        rgba(0, 0, 0, 0.4),
-        rgba(0, 0, 0, 0.4) 1px,
-        transparent 2px,
-        transparent 0,
-        rgba(0, 0, 0, 0.4) 3px
-      );
+    background-image: repeating-linear-gradient(
+      135deg,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4) 1px,
+      transparent 2px,
+      transparent 0,
+      rgba(0, 0, 0, 0.4) 3px
+    );
     background-size: 4px 4px;
     transition: background 0.2s ease;
   }
