--- a/src/components/profile.pug
+++ b/src/components/profile.pug
@@ -12,7 +12,7 @@
     h3 JavaScript Developer
     .profile__contacts
       a.profile__links(
-        href='mailto:djmakaron2009@gmail.com',
+        href='mailto:me@dmostovyi.com',
         itemprop='email',
         target='_blank'
       )
