--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,7 @@ html(lang='en', itemtype='https://schema.org/Person', itemscope)
   head
     include ./components/head.pug
     link(rel='stylesheet', href='/index.scss')
+    script(async, src='https://umami.seabehind.me/u', data-website-id='f9aca0c3-a1d7-4b0e-ad20-da112e1750ce')
   body
     include ./components/progressive.pug
 
