Add aria-labels for social links

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -15,6 +15,7 @@ import ProfileLink from "./ProfileLink.astro";
       <ProfileLink
         href="mailto:me@dmostovyi.com"
         target="_blank"
+        aria-label="Send a mail to Dmytro Mostoviy"
         data-umami-event="Send a mail"
       >
         <Icon name="envelope" class="w-5 h-5" />
@@ -23,6 +24,7 @@ import ProfileLink from "./ProfileLink.astro";
         href="https://github.com/distolma"
         target="_blank"
         rel="noopener"
+        aria-label="Navigate to Dmytro Mostoviy's Github profile"
         data-umami-event="Navigate to Github"
       >
         <Icon name="github" class="w-5 h-5" />
@@ -31,6 +33,7 @@ import ProfileLink from "./ProfileLink.astro";
         href="https://www.linkedin.com/in/dmytromostovyi/"
         target="_blank"
         rel="noopener"
+        aria-label="Navigate to Dmytro Mostoviy's LinkedIn profile"
         data-umami-event="Navigate to LinkedIn"
       >
         <Icon name="linkedin" class="w-5 h-5" />
