--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -15,7 +15,7 @@ import ProfileLink from "./ProfileLink.astro";
       <ProfileLink
         href="mailto:me@dmostovyi.com"
         target="_blank"
-        aria-label="Send a mail to Dmytro Mostoviy"
+        aria-label="Send a mail to Dmytro Mostovyi"
         data-umami-event="Send a mail"
       >
         <Icon name="envelope" class="w-5 h-5" />
@@ -24,7 +24,7 @@ import ProfileLink from "./ProfileLink.astro";
         href="https://github.com/distolma"
         target="_blank"
         rel="noopener"
-        aria-label="Navigate to Dmytro Mostoviy's Github profile"
+        aria-label="Navigate to Dmytro Mostovyi's Github profile"
         data-umami-event="Navigate to Github"
       >
         <Icon name="github" class="w-5 h-5" />
@@ -33,7 +33,7 @@ import ProfileLink from "./ProfileLink.astro";
         href="https://www.linkedin.com/in/dmytromostovyi/"
         target="_blank"
         rel="noopener"
-        aria-label="Navigate to Dmytro Mostoviy's LinkedIn profile"
+        aria-label="Navigate to Dmytro Mostovyi's LinkedIn profile"
         data-umami-event="Navigate to LinkedIn"
       >
         <Icon name="linkedin" class="w-5 h-5" />
