--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -4,12 +4,12 @@ import ProfileLink from "./ProfileLink.astro";
 ---
 
 <div>
-  <div class="flex flex-col gap-4 text-center bg-white dark:bg-red">
-    <div>
+  <div class="flex flex-col gap-4 text-center text-slate-900 dark:text-slate-50">
+    <hgroup>
       <h1 class="text-2xl">Dmytro Mostovyi</h1>
 
-      <h3 class="text-lg">Software Engineer</h3>
-    </div>
+      <h2 class="text-lg">Software Engineer</h3>
+    </hgroup>
 
     <div class="flex gap-8 justify-center">
       <ProfileLink
