--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const { title } = Astro.props;
     }
     <title>{title}</title>
   </head>
-  <body class="flex h-screen">
+  <body class="flex h-screen bg-slate-50 dark:bg-slate-900">
     <slot />
   </body>
 </html>
