--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -4,7 +4,7 @@ import ProfileLink from "./ProfileLink.astro";
 ---
 
 <div>
-  <div class="flex flex-col gap-4 text-center text-slate-900 dark:text-slate-50">
+  <div class="flex flex-col gap-4 text-center text-gray-700 dark:text-gray-100">
     <hgroup>
       <h1 class="text-2xl">Dmytro Mostovyi</h1>
 
