--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,16 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Profile from "../components/Profile.astro";
+import Jumbo from "../components/Jumbo.astro";
 ---
 
 <Layout title="Dmytro Mostovyi | Github Page">
-  <section class="flex flex-1 items-center justify-center">
-    <Profile />
-  </section>
+  <div class="flex flex-1">
+    <div class="absolute inset-0 overflow-clip">
+      <Jumbo />
+    </div>
+    <section class="flex flex-1 items-center justify-center">
+      <Profile />
+    </section>
+  </div>
 </Layout>
