Add prettier-plugin-tailwindcss and update class order in Profile and ProfileLink components

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -10,7 +10,7 @@ import { Icon } from "astro-icon/components";
       <h2 class="text-lg">Software Engineer</h2>
     </hgroup>
 
-    <div class="flex gap-8 justify-center">
+    <div class="flex justify-center gap-8">
       <a
         class="inline-block h-9 w-9 p-2"
         href="mailto:me@dmostovyi.com"
@@ -18,7 +18,7 @@ import { Icon } from "astro-icon/components";
         aria-label="Send a mail to Dmytro Mostovyi"
         data-umami-event="Send a mail"
       >
-        <Icon name="envelope" class="w-5 h-5" aria-hidden="true" />
+        <Icon name="envelope" class="h-5 w-5" aria-hidden="true" />
       </a>
       <a
         class="inline-block h-9 w-9 p-2"
@@ -28,7 +28,7 @@ import { Icon } from "astro-icon/components";
         aria-label="Navigate to Dmytro Mostovyi's Github profile"
         data-umami-event="Navigate to Github"
       >
-        <Icon name="github" class="w-5 h-5" aria-hidden="true" />
+        <Icon name="github" class="h-5 w-5" aria-hidden="true" />
       </a>
       <a
         class="inline-block h-9 w-9 p-2"
@@ -38,7 +38,7 @@ import { Icon } from "astro-icon/components";
         aria-label="Navigate to Dmytro Mostovyi's LinkedIn profile"
         data-umami-event="Navigate to LinkedIn"
       >
-        <Icon name="linkedin" class="w-5 h-5" aria-hidden="true" />
+        <Icon name="linkedin" class="h-5 w-5" aria-hidden="true" />
       </a>
     </div>
   </div>
