--- a/src/components/ProfileLink.astro
+++ b/src/components/ProfileLink.astro
@@ -11,7 +11,7 @@ const { ...attrs } = Astro.props;
   class="group relative inline-block h-9 w-9 cursor-pointer p-2 outline-none"
 >
   <div
-    class="absolute left-0 top-0 h-full w-full scale-0 rounded-full bg-slate-200 dark:bg-slate-600 transition-transform duration-200 ease-in-out group-hover:scale-100 group-focus-visible:scale-100"
+    class="absolute left-0 top-0 h-full w-full scale-0 rounded-full bg-slate-200 transition-transform duration-200 ease-in-out group-hover:scale-100 group-focus-visible:scale-100 dark:bg-slate-600"
   >
   </div>
   <div class="relative"><slot /></div>
