--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Jumbo from "../components/Jumbo.astro";
     <div class="absolute inset-0 overflow-clip">
       <Jumbo />
     </div>
-    <section class="flex flex-1 items-center justify-center relative">
+    <section class="relative flex flex-1 items-center justify-center">
       <Profile />
     </section>
   </div>
