--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Jumbo from "../components/Jumbo.astro";
 import Profile from "../components/Profile.astro";
 import Layout from "../layouts/Layout.astro";
+import "../styles/global.css";
 ---
 
 <Layout title="Dmytro Mostovyi | Github Page">
