--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -15,8 +15,8 @@ import { Icon } from "astro-icon/components";
         class="inline-block h-9 w-9 p-2"
         href="mailto:me@dmostovyi.com"
         target="_blank"
-        aria-label="Send a mail to Dmytro Mostovyi"
-        data-umami-event="Send a mail"
+        aria-label="Send an email to Dmytro Mostovyi"
+        data-umami-event="Send an email"
       >
         <Icon name="envelope" class="h-5 w-5" aria-hidden="true" />
       </a>
