--- a/src/components/Jumbo.astro
+++ b/src/components/Jumbo.astro
@@ -39,35 +39,43 @@
     --rainbow: repeating-linear-gradient(
       100deg,
       #60a5fa 10%,
-      #e879f9 15%,
-      #60a5fa 20%,
-      #5eead4 25%,
+      #e879f9 16%,
+      #5eead4 22%,
       #60a5fa 30%
     );
-
     inset: -10px;
+    contain: strict;
+    contain-intrinsic-size: 100vw 100vh;
     background-image: var(--stripes), var(--rainbow);
     background-size: 300%, 200%;
     background-position:
       50% 50%,
       50% 50%;
-
+    height: inherit;
+    -webkit-transform: translateZ(0);
+    -webkit-perspective: 1000;
+    -webkit-backface-visibility: hidden;
     filter: blur(10px) invert(100%);
-
+    -webkit-mask-image: radial-gradient(
+      ellipse at 100% 0%,
+      black 40%,
+      transparent 70%
+    );
     mask-image: radial-gradient(ellipse at 100% 0%, black 40%, transparent 70%);
-
     pointer-events: none;
   }
 
   .jumbo::after {
     content: "";
     position: absolute;
-    inset: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-image: var(--stripes), var(--rainbow);
     background-size: 200%, 100%;
-    background-position: fixed;
     mix-blend-mode: difference;
-    animation: jumbo 60s linear infinite;
+    animation: jumbo 90s linear infinite;
   }
 
   @media (prefers-reduced-motion) {
