--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
         <script
           async
           defer
-          src="https://umami.dmostovyi.com/script.js"
+          src="https://u.dmostovyi.com/script.js"
           data-website-id="f9aca0c3-a1d7-4b0e-ad20-da112e1750ce"
         />
       )
